completed environment build

--- a/warthog_bicycle.ipynb
+++ b/warthog_bicycle.ipynb
@@ -4,12 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: TkAgg\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "from env.WarthogEnv import WarthogEnv\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv\n",
     "import numpy as np\n",
+    "%matplotlib\n",
     "from matplotlib import pyplot as plt\n",
     "from stable_baselines3 import PPO"
    ]
@@ -21,15 +30,47 @@
    "outputs": [],
    "source": [
     "#env = DummyVecEnv([lambda: WarthogEnv('unity_remote.txt')])\n",
-    "env = WarthogEnv('unity_remote.txt')"
+    "env = WarthogEnv('unity_remote.txt')\n",
+    "x = []\n",
+    "y = []\n",
+    "env.reset()\n",
+    "for i in range(0,5000):\n",
+    "    action = [0.5,0.1]\n",
+    "    obs, reward, done, info = env.step(action)\n",
+    "    env.render()\n",
+    "    #x.append(info[0][0])\n",
+    "    #y.append(info[0][1])\n",
+    "    if done:\n",
+    "        #print(\"resetting\")\n",
+    "        env.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/akhil/anaconda3/envs/rl/lib/python3.8/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n",
+      "Wrapping the env in a DummyVecEnv.\n"
+     ]
+    }
+   ],
    "source": [
+    "env = WarthogEnv('unity_remote.txt')\n",
+    "#obs = env.reset()\n",
+    "#print(obs)\n",
     "model = PPO('MlpPolicy', env, verbose=1)"
    ]
   },
@@ -37,7 +78,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------\n",
+      "| time/              |      |\n",
+      "|    fps             | 28   |\n",
+      "|    iterations      | 1    |\n",
+      "|    time_elapsed    | 71   |\n",
+      "|    total_timesteps | 2048 |\n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "model.learn(total_timesteps=1e7)"
    ]
@@ -54,12 +109,13 @@
     "for i in range(0,1000):\n",
     "    action = [0.5,0.1]\n",
     "    obs, reward, done, info = env.step(action)\n",
-    "    x.append(info[0][0])\n",
-    "    y.append(info[0][1])\n",
+    "    env.render()\n",
+    "    #x.append(info[0][0])\n",
+    "    #y.append(info[0][1])\n",
     "    if done:\n",
     "        print(\"resetting\")\n",
     "        env.reset()\n",
-    "    print(info)\n"
+    "    #print(info)\n"
    ]
   },
   {
