--- a/warthog_bicycle.ipynb
+++ b/warthog_bicycle.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
    "source": [
     "model1 = PPO('MlpPolicy', env, verbose=1)\n",
     "model = PPO('MlpPolicy', env, verbose=1)\n",
-    "model = PPO.load('parallel10')\n",
+    "model = PPO.load('samestart7')\n",
     "model.env = model1.env\n",
     "act1 = []\n",
     "act2 = []\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +262,13 @@
     "plt.plot(act2)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
