added evaluations for st3 and manual ppo

--- a/ppo_warthog.ipynb
+++ b/ppo_warthog.ipynb
@@ -231,15 +231,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ppo(env, seed = 0, buff_size = 4000, train_time_steps = 10000000, gamma = 0.99, clip_ratio = 0.2, lr_pi = 3e-4, \n",
-    "        lr_vf = 1e-2, pi_train_itrs = 80, v_train_itrs = 80, lam = 0.97, max_ep_len = 500):\n",
+    "def ppo(env, seed = 0, buff_size = 4000, train_time_steps = 10000000, gamma = 0.99, clip_ratio = 0.2, lr_pi = 3e-5, \n",
+    "        lr_vf = 1e-3, pi_train_itrs = 80, v_train_itrs = 80, lam = 0.97, max_ep_len = 500):\n",
     "        obs_dim = env.observation_space.shape\n",
     "        #action_dim = 2\n",
     "        action_dim = env.action_space.shape\n",
     "        h_sizes = [64,64]\n",
-    "        vi = ValueNetwork(*obs_dim, h_sizes).to(device)\n",
+    "        vi = ValueNetwork(*obs_dim, h_sizes, act= nn.Tanh).to(device)\n",
     "        #pi = PolicyNetworkCat(*obs_dim, h_sizes, action_dim).to(device)\n",
-    "        pi = PolicyNetworkGauss(*obs_dim, h_sizes, *action_dim).to(device)\n",
+    "        pi = PolicyNetworkGauss(*obs_dim, h_sizes, *action_dim, act = nn.Tanh).to(device)\n",
     "        data_buff = PPOBuffer(*obs_dim, *action_dim, buff_size)\n",
     "        policy_opt = optim.Adam(pi.parameters(), lr = lr_pi)\n",
     "        value_opt = optim.Adam(vi.parameters(), lr = lr_vf)\n",
@@ -288,6 +288,7 @@
     "                                data_buff.finish_path(v_)\n",
     "                        if(curr_time_step % 100000 == 0):\n",
     "                                torch.save(pi, f'./temp_policy/tan_h/manaul_ppo_{curr_time_step}.pt')\n",
+    "                                np.savetxt(f'./temp_policy/tan_h/avg_rew_{curr_time_step}', np.mean(ep_rewards[-10:-2]), fmt='%f')\n",
     "                        #curr_time_step+=1\n",
     "                      #  pbar.update(1)\n",
     "                data = data_buff.get()\n",
