--- a/ppo_warthog.ipynb
+++ b/ppo_warthog.ipynb
@@ -288,12 +288,13 @@
     "                                data_buff.finish_path(v_)\n",
     "                        if(curr_time_step % 100000 == 0):\n",
     "                                torch.save(pi, f'./temp_policy/tan_h/manaul_ppo_{curr_time_step}.pt')\n",
-    "                                np.savetxt(f'./temp_policy/tan_h/avg_rew_{curr_time_step}', np.mean(ep_rewards[-10:-2]), fmt='%f')\n",
+    "                                np.savetxt(f'./temp_policy/tan_h/avg_rew_{curr_time_step}', ep_rewards, fmt='%f')\n",
     "                        #curr_time_step+=1\n",
     "                      #  pbar.update(1)\n",
     "                data = data_buff.get()\n",
     "                ret, act, adv, o, logp_old= data['ret'].to(device), data['act'].to(device), data['adv'].to(device), data['obs'].to(device), data['logp'].to(device)\n",
     "                for j in range(0, pi_train_itrs):\n",
+    "                        policy_opt.zero_grad()\n",
     "                        act_dist = pi(o)\n",
     "                        logp = act_dist.log_prob(act).sum(dim=1)\n",
     "                        ratio = torch.exp(logp - logp_old)\n",
