--- a/ppo_warthog_extended.ipynb
+++ b/ppo_warthog_extended.ipynb
@@ -282,12 +282,12 @@
     "                                        curr_time = time.time()\n",
     "                                        if num_episode %100 == 0:\n",
     "                                                print(f'episode: {num_episode-1} \\t episode_reward: {np.mean(ep_rewards[-10:-2])} \\t total steps:{curr_time_step}\\t fps\"{curr_time_step/(curr_time-start_time)}\\t avg_ep_steps: {np.mean(ep_steps[-10:-2])}')\n",
+    "                                                torch.save(pi, f'./temp_policy/tan_h/manaul2_ppo_batch_{curr_time_step}.pt')\n",
     "                                else:\n",
     "                                        v_ = vi(torch.as_tensor(obs, dtype=torch.float32).to(device))\n",
     "                                        v_ = v_.detach().cpu().numpy()\n",
     "                                data_buff.finish_path(v_)\n",
     "                        if(curr_time_step % 100000 == 0):\n",
-    "                                torch.save(pi, f'./temp_policy/tan_h/manaul_ppo_batch_{curr_time_step}.pt')\n",
     "                                np.savetxt(f'./temp_policy/tan_h/avg_rew_{curr_time_step}', ep_rewards, fmt='%f')\n",
     "\n",
     "                        #curr_time_step+=1\n",
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ppo')",
+   "display_name": "Python 3.7.13 ('rl')",
    "language": "python",
    "name": "python3"
   },
@@ -417,12 +417,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "122de4a4be327aa1ba4f735a2434ab4bffab9a9a54192dfc85777065cfde1c01"
+    "hash": "4740f7e2305a459a935d8d587c8fcbc1b1d6d7caacdc0daf6a3c40a8f96c94af"
    }
   }
  },
